# OfCounsel

./: README.md
gleb/data/: CCPA  RecRoom_complete.md  RecRoom_complete_redacted.md  all_answers_list.pkl  definitions  recroom notice  recroom notice upd  tracking_inputs_outputs.csv
gleb/data/QA_dataset/: data-00000-of-00001.arrow  state.json
gleb/nb/: agent.ipynb  agent_with_loop.ipynb  compliance.ipynb  compliance_analysis_only.ipynb  prompting_no_mem.ipynb  ryans_Evaluate.ipynb
gleb/src/: prompting.py  test_main.py  tracking_inputs_outputs.py
kdr/google-doc-interaction/appscript/: CallFromMenu.gs  (+1 more)
kdr/notebooks/: .gitignore  a.txt  b.txt  google-doc-manipulation.ipynb  representing-doc-diffs.ipynb
taylor/: .gitignore  README.md  plan.md  pyproject.toml
taylor/db/: README.md  create_fjc.sql  schema-2022-12-31.sql  schema-2023-07-31.sql  stats.sql
taylor/misc/: chat.ts
taylor/nb/: Evaluate.ipynb  Opinionextraction.ipynb  agent.ipynb  calling_rag.ipynb  data_load.ipynb  diffbot_neo4j_experiment.ipynb  extract.ipynb  gpt_extraction.ipynb  load_ca_code.ipynb  meta_planning.ipynb  models.py  nb_utils.py  partition_chunk_and_embed.ipynb  partition_usc_html.ipynb  validation_cases.ipynb
taylor/src/: scraping.py
taylor/src/research_copilot/: agent.py  agent_prompts.py  embedding.py  llm.py  utils.py
taylor/src/research_copilot/data_loading/: privacy_policy.py
taylor/src/research_copilot/db/: ca_code.py  courtlistener.py
taylor/src/research_copilot/preprocess/: pdf.py
taylor/src/research_copilot/slackbot/: README.md  app.py  app_state.py
(+9 files in other folders)
